# cheribsd-rtld-sandbox

./: .gitignore  CMakeLists.txt
benchmark/: CMakeLists.txt  Makefile  ablation-study.sh  benchmark-magick.sh  benchmark-utils.h  dlopen-benchmark.c  dlsym-benchmark.c  function-call-benchmark.c  getusecs.c  helloworld_1000.c  helloworld_with_deps_10.c  lazy-binding-benchmark.c  pngtest-testimgs.sh  prepare-testimgs.sh  run-benchmarks.sh
benchmark/evaluation/: micro-benchmark-analysis.ipynb
benchmark/results/: baseline.json  sandbox.json
include/: dlfcn.h
lib/: Makefile
lib/libc/aarch64/sys/: Makefile.inc
lib/libthr/thread/: thr_private.h  thr_rtld.c
lib/libz_nofio/: Makefile
libexec/rtld-elf/: CMakeLists.txt  Makefile  Symbol.map  map_object.c  rtld.c  rtld.h  rtld_lock.h  rtld_sandbox.c
libexec/rtld-elf/aarch64/: reloc.c  rtld_machdep.h  rtld_start.S
libexec/rtld-elf/rtld-libc/: rtld_libc.c
libexec/rtld-elf/tests/: Makefile
libexec/rtld-elf/tests/sandbox/: Makefile  dependency-policies.c  utils.h
libexec/rtld-elf/tests/sandbox/libcallback/: Makefile  callback.c  (+1 more)
sys/arm64/arm64/: trap.c
sys/arm64/cheri/: cheri_coaccept.S  cheri_cocall.S  cheri_machdep.c
sys/arm64/include/: db_machdep.h  md_var.h  proc.h
sys/cheri/: cheri_colocation.c
sys/conf/: files.arm64  options
sys/kern/: kern_malloc.c  sys_process.c  uipc_mbuf.c  vfs_mount.c
sys/libkern/: strlen.c
sys/mips/include/: cpufunc.h
sys/riscv/include/: cpufunc.h
sys/riscv/riscv/: vm_machdep.c
sys/sys/: malloc.h  mbuf.h  proc.h
sys/vm/: vm_map.c
usr.bin/vmstat/: vmstat.c
(+11 files in other folders)
